--- a/package.json
+++ b/package.json
@@ -25,5 +25,13 @@
   "devDependencies": {
     "nodemon": "^3.1.10"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hasanulb/Blog-backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/hasanulb/Blog-backend/issues"
+  },
+  "homepage": "https://github.com/hasanulb/Blog-backend#readme",
   "description": ""
 }
